--- a/Laboratorio3/package.json
+++ b/Laboratorio3/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "install": "^0.13.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "npm": "^10.8.2",
+    "xlsx": "^0.18.5"
   }
 }
